--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "escpos.c"
+idf_component_register(SRCS "my_gpio.c" "my_timer.c" "main.c" "escpos.c" "epson_nv_memory.c" "my_uart.c" "my_gpio.c"
                        INCLUDE_DIRS .)
