fix command 1b 28 73 04 00 31 41 XX YY

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,9 @@
         "sstream": "c",
         "streambuf": "c",
         "my_timer.h": "c",
-        "my_gpio.h": "c"
+        "my_gpio.h": "c",
+        "tusb_msc_storage.h": "c",
+        "errno.h": "c",
+        "system_error": "c"
     }
 }
