--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "cmd_not_found.c" "my_gpio.c" "my_timer.c" "main.c" "escpos.c" "epson_nv_memory.c" "my_uart.c" "my_gpio.c" "cmd_not_found.c"
-                       INCLUDE_DIRS .)
+idf_component_register(SRCS "my_wifi.c" "my_file.c" "command42.c" "command41.c" "my_gpio.c" "my_timer.c" "main.c" "escpos.c" "epson_nv_memory.c" "my_uart.c" "my_gpio.c" "command41.c" "command42.c"
+                        LDFRAGMENTS "my_linker_fragment_file.lf"
+                        INCLUDE_DIRS .)
